--- a/src/style.css
+++ b/src/style.css
@@ -35,10 +35,163 @@ a:hover{
      hover:transition-all duration-75 ease-in hover:text-gray-600 shadow-lg p-1 mb-2;
  }
 
- .max-height{
-    max-height: 550px;
+ .maxheight{
+    height: 450px;
  }
 
  .footer-container{
     background-color: #758694;
  }
+
+ .footer-section{
+    background: #222222;
+ }
+
+ .subscribe{
+    background-color: #1a1a1b;
+ }
+
+.width{
+    max-width: 1200px;
+}
+.img-width{
+    width: 400px;
+}
+
+.truncate-para{
+    max-height: 5rem;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+}
+
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    max-height: 400px;
+    overflow-y: hidden;
+    overflow-x: auto;
+    gap: 10px;
+    padding: 10px;
+    white-space: nowrap;
+    max-width: 100%;
+}
+
+.grid-container2{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 10px;
+    overflow-y: hidden;
+    overflow-x: auto;
+    max-width: 100%;
+    white-space: nowrap;
+    max-height: 400px;
+}
+
+.grid-container1 {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Adjust as needed */
+    gap: 10px;
+    max-height: 400px; /* Set the maximum height for the scroll area */
+    overflow-y: auto; /* Enables vertical scrolling */
+    overflow-x: hidden; /* Prevents horizontal scrolling if not needed */
+    padding: 10px; /* Optional: add padding around the grid */
+    border: 1px solid #ccc; /* Optional: adds a border around the grid */
+}
+
+.grid-item {
+    background-color: #f0f0f0;
+    border: 1px solid #ddd;
+    padding: 20px;
+    text-align: center;
+}
+
+.heading-height{
+    height: 98px;
+}
+
+.img-height{
+    height:98px;
+}
+
+.container{
+    position: relative;
+}
+
+.container .wrapper{
+    width: 60vw;
+    height: 75vh;
+    box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+    margin: 5rem auto;
+}
+
+.container .wrapper-holder{
+    display: grid;
+    grid-template-columns: repeat(4,100%);
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    animation: slider 30s ease-in-out infinite alternate;
+}
+
+.container #slider-img-1{
+    background-image: url(../build/images/gaming.jpg);
+    background-position: center;
+}
+.container #slider-img-2{
+    background-image: url(../build/images/gaming.jpg);
+    background-position: center;
+}
+.container #slider-img-3{
+    background-image: url(../build/images/desktop.jpg);
+    background-position: center;
+}
+.container #slider-img-4{
+    background-image: url(../build/images/gaming.jpg);
+    background-position: center;
+}
+
+.container .button-holder .button{
+    background-color: black;
+    border-radius: 15px;
+     width: 15px;
+     height: 15px;
+     display: inline-block;
+     margin: 3rem;
+}
+
+.container .button-holder{
+    position:absolute;
+    left: 45%;
+    bottom: 0%;
+}
+
+@keyframes slider{
+    0%{transform: translateX(0%);}
+    10%{transform: translateX(-100%);}
+    20%{transform: translateX(-10%);}
+    30%{transform: translateX(-200%);}
+    40%{transform: translateX(-200%);}
+    50%{transform: translateX(-200%);}
+    60%{transform: translateX(-300%);}
+    70%{transform: translateX(-300%);}
+    80%{transform: translateX(-300%);}
+    90%{transform: translateX(0%);}
+    100%{transform: translateX(0%);}
+}
+
+.recent-blog{
+    display: grid;
+    grid-template-columns: repeat(1fr, 1fr,1fr);
+    background-color: red;
+}
+
+/* @media (prefers-color-scheme: dark){
+    body{
+        background-color: #000;
+        color: #fff;
+    }
+
+} */
